kubernetes/apps/network/external-services/protect/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: &app protect
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
subsets:
  - addresses:
      - ip: "${UNIFI_PROTECT_ADDRESS}"
    ports:
      - name: https
        port: 443
        protocol: TCP
