kubernetes/apps/network/external-services/protect/ingress.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/ingress-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app protect
  annotations:
    hajimari.io/appName: Unifi Protect
    hajimari.io/group: Management
    hajimari.io/icon: mdi:cctv
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  labels:
    app.kubernetes.io/instance: *app
    app.kubernetes.io/name: *app
spec:
  ingressClassName: internal
  rules:
    - host: "protect.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: *app
                port:
                  name: http
            path: /
            pathType: Prefix
